--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,12 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# local env files
+.env
+.env*.local
+.env*.development
+.env*.production
+
 # vercel
 .vercel
 
