--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_URL=http://localhost:8000
+NEXT_PUBLIC_API_URL=http://alb-ecs-moai-desarrollo-882999684.us-east-2.elb.amazonaws.com:8060
 NEXTAUTH_SECRET=MOAI_SECRET_KEY
 NEXT_COGNITO_CLIENT_ID=
 NEXT_COGNITO_CLIENT_SECRET=
