--- a/package.json
+++ b/package.json
@@ -18,34 +18,35 @@
     "@tanstack/react-query": "^5.26.3",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.8",
-    "next": "14.1.3",
     "next-auth": "^4.24.7",
     "next-intl": "^3.9.4",
-    "react": "^18",
+    "next": "14.1.3",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
+    "react": "^18",
     "sharp": "^0.33.3",
     "sonner": "^1.4.3",
+    "ts-jest": "^29.1.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.2",
+    "@testing-library/react": "^14.3.1",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
-    "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react": "^18",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8.57.0",
     "eslint-config-love": "^43.1.0",
     "eslint-config-next": "14.1.3",
     "eslint-plugin-react": "^7.34.0",
-    "jest": "^29.7.0",
+    "eslint": "^8.57.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.2",
-    "typescript-eslint": "^7.2.0"
+    "typescript-eslint": "^7.2.0",
+    "typescript": "^5.4.2"
   }
 }
